; ModuleID = '/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_html.c_toc_link.c'
source_filename = "/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_html.c_toc_link.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buf = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.buf*, %struct.buf*, %struct.buf*, %struct.buf*, i8*)* @toc_link to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @toc_link(%struct.buf* %0, %struct.buf* %1, %struct.buf* %2, %struct.buf* %3, i8* %4) #0 {
  %6 = alloca %struct.buf*, align 8
  %7 = alloca %struct.buf*, align 8
  %8 = alloca %struct.buf*, align 8
  %9 = alloca %struct.buf*, align 8
  %10 = alloca i8*, align 8
  store %struct.buf* %0, %struct.buf** %6, align 8
  store %struct.buf* %1, %struct.buf** %7, align 8
  store %struct.buf* %2, %struct.buf** %8, align 8
  store %struct.buf* %3, %struct.buf** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load %struct.buf*, %struct.buf** %9, align 8
  %12 = icmp ne %struct.buf* %11, null
  br i1 %12, label %13, label %27

13:                                               ; preds = %5
  %14 = load %struct.buf*, %struct.buf** %9, align 8
  %15 = getelementptr inbounds %struct.buf, %struct.buf* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %27

18:                                               ; preds = %13
  %19 = load %struct.buf*, %struct.buf** %6, align 8
  %20 = load %struct.buf*, %struct.buf** %9, align 8
  %21 = getelementptr inbounds %struct.buf, %struct.buf* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  %23 = load %struct.buf*, %struct.buf** %9, align 8
  %24 = getelementptr inbounds %struct.buf, %struct.buf* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @bufput(%struct.buf* %19, i32 %22, i64 %25)
  br label %27

27:                                               ; preds = %18, %13, %5
  ret i32 1
}

declare dso_local i32 @bufput(%struct.buf*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
